@@ -6,7 +6,7 @@ import java.util.List;
 
 public class SubSet {
     List<List<Integer>> result = new ArrayList<>();// 存放符合条件结果的集合
-    LinkedList<Integer> path = new LinkedList<>();// 用来存放符合条件结果
+    List<Integer> list = new ArrayList<>();// 用来存放符合条件结果
     public List<List<Integer>> subsets(int[] nums) {
         if (nums.length == 0)
             return result;
@@ -15,14 +15,14 @@ public class SubSet {
     }
 
     private void backtracking(int[] nums, int startIndex){ // 回溯
-        result.add(new ArrayList<>(path));// 加结果
-        if (startIndex >= nums.length){ //终止条件
+        result.add(new ArrayList<>(list));// 加结果
+        if (startIndex == nums.length){ //终止条件
             return;
         }
         for (int i = startIndex; i < nums.length; i++){
-            path.add(nums[i]); // 收集结果
+            list.add(nums[i]); // 收集结果
             backtracking(nums, i + 1); // 递归
-            path.removeLast();  // 回溯
+            list.remove(list.size()-1);  // 回溯
         }
     }
 }
